syntax = "proto3";

option go_package = ".;richer_error_model_sample";

package sample;

service SampleService {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
  rpc SayError(ErrorRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message ErrorRequest {
  int32 code = 1;
}
